update index.html 28aug by vinod
Check on ...

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h2>welcome to web development world</h2>
 <h3>demo content</h3>
 <h4>Edit Notification Successfull</h4>
-<h2>notify...</h2>
+<h2>notify...28aug by vinod</h2>
